// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RhsmApiTypes Should have specific API properties: all exported api types 1`] = `
Object {
  "RHSM_API_PATH_RHEL_ID_TYPES": Object {
    "ARM": "RHEL for ARM",
    "COMPUTE_NODE": "RHEL Compute Node",
    "DESKTOP": "RHEL Desktop",
    "IBM_POWER": "RHEL for IBM Power",
    "IBM_Z": "RHEL for IBM z",
    "RHEL": "RHEL",
    "SERVER": "RHEL Server",
    "WORKSTATION": "RHEL Workstation",
    "X86": "RHEL for x86",
  },
  "RHSM_API_QUERY_END_DATE": "ending",
  "RHSM_API_QUERY_GRANULARITY": "granularity",
  "RHSM_API_QUERY_GRANULARITY_TYPES": Object {
    "DAILY": "daily",
    "MONTHLY": "monthly",
    "QUARTERLY": "quarterly",
    "WEEKLY": "weekly",
  },
  "RHSM_API_QUERY_LIMIT": "limit",
  "RHSM_API_QUERY_OFFSET": "offset",
  "RHSM_API_QUERY_START_DATE": "beginning",
  "RHSM_API_RESPONSE_CAPACITY_DATA": "data",
  "RHSM_API_RESPONSE_CAPACITY_DATA_TYPES": Object {
    "DATE": "date",
    "HAS_INFINITE": "has_infinite_quantity",
    "HYPERVISOR_SOCKETS": "hypervisor_sockets",
    "PHYSICAL_SOCKETS": "physical_sockets",
    "SOCKETS": "sockets",
  },
  "RHSM_API_RESPONSE_CAPACITY_META": "meta",
  "RHSM_API_RESPONSE_CAPACITY_META_TYPES": Object {
    "COUNT": "count",
  },
  "RHSM_API_RESPONSE_PRODUCTS_DATA": "data",
  "RHSM_API_RESPONSE_PRODUCTS_DATA_TYPES": Object {
    "DATE": "date",
    "HAS_DATA": "has_data",
    "HYPERVISOR_SOCKETS": "hypervisor_sockets",
    "PHYSICAL_SOCKETS": "physical_sockets",
    "SOCKETS": "sockets",
  },
  "RHSM_API_RESPONSE_PRODUCTS_META": "meta",
  "RHSM_API_RESPONSE_PRODUCTS_META_TYPES": Object {
    "COUNT": "count",
  },
  "default": Object {
    "RHSM_API_PATH_RHEL_ID_TYPES": Object {
      "ARM": "RHEL for ARM",
      "COMPUTE_NODE": "RHEL Compute Node",
      "DESKTOP": "RHEL Desktop",
      "IBM_POWER": "RHEL for IBM Power",
      "IBM_Z": "RHEL for IBM z",
      "RHEL": "RHEL",
      "SERVER": "RHEL Server",
      "WORKSTATION": "RHEL Workstation",
      "X86": "RHEL for x86",
    },
    "RHSM_API_QUERY_END_DATE": "ending",
    "RHSM_API_QUERY_GRANULARITY": "granularity",
    "RHSM_API_QUERY_GRANULARITY_TYPES": Object {
      "DAILY": "daily",
      "MONTHLY": "monthly",
      "QUARTERLY": "quarterly",
      "WEEKLY": "weekly",
    },
    "RHSM_API_QUERY_LIMIT": "limit",
    "RHSM_API_QUERY_OFFSET": "offset",
    "RHSM_API_QUERY_START_DATE": "beginning",
    "RHSM_API_RESPONSE_CAPACITY_DATA": "data",
    "RHSM_API_RESPONSE_CAPACITY_DATA_TYPES": Object {
      "DATE": "date",
      "HAS_INFINITE": "has_infinite_quantity",
      "HYPERVISOR_SOCKETS": "hypervisor_sockets",
      "PHYSICAL_SOCKETS": "physical_sockets",
      "SOCKETS": "sockets",
    },
    "RHSM_API_RESPONSE_CAPACITY_META": "meta",
    "RHSM_API_RESPONSE_CAPACITY_META_TYPES": Object {
      "COUNT": "count",
    },
    "RHSM_API_RESPONSE_PRODUCTS_DATA": "data",
    "RHSM_API_RESPONSE_PRODUCTS_DATA_TYPES": Object {
      "DATE": "date",
      "HAS_DATA": "has_data",
      "HYPERVISOR_SOCKETS": "hypervisor_sockets",
      "PHYSICAL_SOCKETS": "physical_sockets",
      "SOCKETS": "sockets",
    },
    "RHSM_API_RESPONSE_PRODUCTS_META": "meta",
    "RHSM_API_RESPONSE_PRODUCTS_META_TYPES": Object {
      "COUNT": "count",
    },
  },
  "rhsmApiTypes": Object {
    "RHSM_API_PATH_RHEL_ID_TYPES": Object {
      "ARM": "RHEL for ARM",
      "COMPUTE_NODE": "RHEL Compute Node",
      "DESKTOP": "RHEL Desktop",
      "IBM_POWER": "RHEL for IBM Power",
      "IBM_Z": "RHEL for IBM z",
      "RHEL": "RHEL",
      "SERVER": "RHEL Server",
      "WORKSTATION": "RHEL Workstation",
      "X86": "RHEL for x86",
    },
    "RHSM_API_QUERY_END_DATE": "ending",
    "RHSM_API_QUERY_GRANULARITY": "granularity",
    "RHSM_API_QUERY_GRANULARITY_TYPES": Object {
      "DAILY": "daily",
      "MONTHLY": "monthly",
      "QUARTERLY": "quarterly",
      "WEEKLY": "weekly",
    },
    "RHSM_API_QUERY_LIMIT": "limit",
    "RHSM_API_QUERY_OFFSET": "offset",
    "RHSM_API_QUERY_START_DATE": "beginning",
    "RHSM_API_RESPONSE_CAPACITY_DATA": "data",
    "RHSM_API_RESPONSE_CAPACITY_DATA_TYPES": Object {
      "DATE": "date",
      "HAS_INFINITE": "has_infinite_quantity",
      "HYPERVISOR_SOCKETS": "hypervisor_sockets",
      "PHYSICAL_SOCKETS": "physical_sockets",
      "SOCKETS": "sockets",
    },
    "RHSM_API_RESPONSE_CAPACITY_META": "meta",
    "RHSM_API_RESPONSE_CAPACITY_META_TYPES": Object {
      "COUNT": "count",
    },
    "RHSM_API_RESPONSE_PRODUCTS_DATA": "data",
    "RHSM_API_RESPONSE_PRODUCTS_DATA_TYPES": Object {
      "DATE": "date",
      "HAS_DATA": "has_data",
      "HYPERVISOR_SOCKETS": "hypervisor_sockets",
      "PHYSICAL_SOCKETS": "physical_sockets",
      "SOCKETS": "sockets",
    },
    "RHSM_API_RESPONSE_PRODUCTS_META": "meta",
    "RHSM_API_RESPONSE_PRODUCTS_META_TYPES": Object {
      "COUNT": "count",
    },
  },
}
`;

exports[`RhsmApiTypes Should have specific API properties: specific types 1`] = `
Object {
  "RHSM_API_PATH_RHEL_ID_TYPES": Object {
    "ARM": "RHEL for ARM",
    "COMPUTE_NODE": "RHEL Compute Node",
    "DESKTOP": "RHEL Desktop",
    "IBM_POWER": "RHEL for IBM Power",
    "IBM_Z": "RHEL for IBM z",
    "RHEL": "RHEL",
    "SERVER": "RHEL Server",
    "WORKSTATION": "RHEL Workstation",
    "X86": "RHEL for x86",
  },
  "RHSM_API_QUERY_END_DATE": "ending",
  "RHSM_API_QUERY_GRANULARITY": "granularity",
  "RHSM_API_QUERY_GRANULARITY_TYPES": Object {
    "DAILY": "daily",
    "MONTHLY": "monthly",
    "QUARTERLY": "quarterly",
    "WEEKLY": "weekly",
  },
  "RHSM_API_QUERY_LIMIT": "limit",
  "RHSM_API_QUERY_OFFSET": "offset",
  "RHSM_API_QUERY_START_DATE": "beginning",
  "RHSM_API_RESPONSE_CAPACITY_DATA": "data",
  "RHSM_API_RESPONSE_CAPACITY_DATA_TYPES": Object {
    "DATE": "date",
    "HAS_INFINITE": "has_infinite_quantity",
    "HYPERVISOR_SOCKETS": "hypervisor_sockets",
    "PHYSICAL_SOCKETS": "physical_sockets",
    "SOCKETS": "sockets",
  },
  "RHSM_API_RESPONSE_CAPACITY_META": "meta",
  "RHSM_API_RESPONSE_CAPACITY_META_TYPES": Object {
    "COUNT": "count",
  },
  "RHSM_API_RESPONSE_PRODUCTS_DATA": "data",
  "RHSM_API_RESPONSE_PRODUCTS_DATA_TYPES": Object {
    "DATE": "date",
    "HAS_DATA": "has_data",
    "HYPERVISOR_SOCKETS": "hypervisor_sockets",
    "PHYSICAL_SOCKETS": "physical_sockets",
    "SOCKETS": "sockets",
  },
  "RHSM_API_RESPONSE_PRODUCTS_META": "meta",
  "RHSM_API_RESPONSE_PRODUCTS_META_TYPES": Object {
    "COUNT": "count",
  },
}
`;
